--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -245,11 +245,11 @@ description: |
     A wiki using the Dancer-powered <a href="https://gitorious.org/amuse-wiki">
     amuse-wiki</a>
 ---
-url: "http://www.usedcarsgroup.com/"
+url: "https://www.usedcarsgroup.com/"
 title: "Used Cars Group"
 description: "A high traffic used cars for sale website in US"
 ---
-url: "http://geekuni.com/"
+url: "https://geekuni.com/"
 title: "Geekuni"
 description: "An online programming school with a course on Dancer" 
 ---
@@ -257,11 +257,6 @@ url: "https://perlmaven.com/"
 title: "Perl Maven"
 description: "The biggest source of Perl-related articles and screencasts running on Dancer 2. Offering courses in Perl for Beginners and for web developmers who want to use Dancer."
 source: "https://github.com/szabgab/Perl-Maven"
-dancer: 2
----
-url: "http://www.strehler-cms.org/"
-title: "Strehler CMS"
-description: "A light-weight, nerdy, smart CMS in perl based on Perl Dancer2 framework."
 dancer: 2
 ---
 title: "App::Notifier"
