--- a/removed_from_dancefloor.yml
+++ b/removed_from_dancefloor.yml
@@ -3,4 +3,8 @@ url: "http://www.strehler-cms.org/"
 title: "Strehler CMS"
 description: "A light-weight, nerdy, smart CMS in perl based on Perl Dancer2 framework."
 dancer: 2
+---
+url: "http://www.softwaresolutionservicesinc.com/"
+title: "Software Solution Services"
+description: "A Minnesota-based technology consulting firm"
 
