--- a/removed_from_dancefloor.yml
+++ b/removed_from_dancefloor.yml
@@ -7,4 +7,8 @@ dancer: 2
 url: "http://www.softwaresolutionservicesinc.com/"
 title: "Software Solution Services"
 description: "A Minnesota-based technology consulting firm"
+---
+url: "http://www.livro-aberto.net/"
+title: "Livro-Aberto"
+description: "A website in Portuguese."
 
